Fix bare button style, also fixed text alignment of header

--- a/front-end/src/app/layout/banner/banner.component.scss
+++ b/front-end/src/app/layout/banner/banner.component.scss
@@ -64,7 +64,7 @@
   padding-right: 1rem;
   display: flex !important;
   flex-wrap: wrap !important;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .usa-banner__header {
